Bug 162104 - Background Color tool empty on a clear profile (25.2 master)
Summary: Background Color tool empty on a clear profile (25.2 master)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2024-07-19 13:27 UTC by Rafael Lima
Modified: 2025-10-13 11:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (37.09 KB, image/png)
2024-07-19 13:27 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-07-19 13:27:02 UTC
Created attachment 195396 [details]
Screenshot showing the problem

If you build LO and open Calc on a clear user profile, the Background Tool will be empty.

See attached screenshot for details.

The "Standard" pallet should be chosen. In the past its name was "standard" with lowercase "s", which may be the problem here.

Version info

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cb3ab04adaed834341f6324c7e77f46f56f1f049
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 1 BogdanB 2024-07-19 20:00:54 UTC
Confirm with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d924018f3ea58050081936bde067391714a8bb5
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
-----

Was ok in the buid from 2 weeks ago in
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 48e76366ea5932a75792ba5d5e6a474e8003733f
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Not ok in 25.2 built 5 hours ago
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d924018f3ea58050081936bde067391714a8bb5
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

I could not bibisect, it's too new for the bibisect repository.
Comment 2 BogdanB 2024-07-19 20:03:49 UTC
Maybe this is the cause? https://gerrit.libreoffice.org/c/core/+/170394
Comment 3 Rafael Lima 2024-07-19 21:08:48 UTC
(In reply to BogdanB from comment #2)
> Maybe this is the cause? https://gerrit.libreoffice.org/c/core/+/170394

Indeed... here's a fix for the issue:
https://gerrit.libreoffice.org/c/core/+/170732
Comment 4 Commit Notification 2024-07-22 23:56:00 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a7de9cc5e89cd0d0c2f6363b2c0cc265c528b121

tdf#162104 Make sure the standard palette gets selected in a clear profile

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.